--- a/views/stocks/index.erb
+++ b/views/stocks/index.erb
@@ -1,9 +1,10 @@
 <h1>Current Stock</h1>
 
-<b>Stock type</b><br>
-<% @stock.each do |stock|%>
 
-<p><a href="/stocks/<%= stock.id%>"><%= stock.stock_type %> </p><br>
-<%= stock.stock_level%> meters in stock
+<% @stock.each do |stock|%>
+<b>Stock type</b><br>
+<p><a href="/stocks/<%= stock.id%>">    <%= stock.stock_type.upcase %><br>
+  <%= stock.stock_level%> meters in stock</p><br>
+<hr>
 
 <%end%>
