--- a/views/stocks/show.erb
+++ b/views/stocks/show.erb
@@ -1,4 +1,4 @@
 <b>Stock Type:</b>
-<p><%= @stocks.stock_type%></p>
+<p><%= @stocks.stock_type.upcase%><br>
 
-<a href="/stocks/<%= @stocks.id%>/edit">Add More Stock</a>
+<a href="/stocks/<%= @stocks.id%>/edit">Add More Stock</a></p>
