--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,82 @@
+
 body {
   font-family: 'Maven Pro', sans-serif;
+  background: #252839; 
+  
+  background-size: 100%;
+
 }
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+ul li{
+    display: inline-block;
+    background-color: #677077;
+    padding: 20px;
+    margin: 15px;
+    border-radius: 25px;
+    text-decoration: none;
+    color: #f2b632;
+    font-size: 3em;
+    box-shadow: 3px;
+
+
+}
+
+h1, h2, b {
+  color: #b5b5b7;
+}
+
+nav a {
+  color: #f2b632;
+}
+
+a {
+  color: #677077;
+  text-decoration: none;
+}
+
+p {
+  margin-left: 30px;
+  color:#677077;
+  background-color: #f2b632;
+  display: inline-block;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+hr {
+  color: #b5b5b7;
+}
+
+form {
+
+}
+
+input {
+  width: 60%;
+  margin: 10px;
+  padding: 8px;
+  border-radius: 5px;
+  background-color: #b5b5b7;
+  font-size: 1.5em;
+}
+
+label {
+  color: #f2b632;
+  font-size: 2.2em;
+}
+
+select {
+  color:#f2b632;
+  width: 25%;
+
+}
+
+p b{
+  color: #252839;
+}
+
