--- a/views/jobs/show.erb
+++ b/views/jobs/show.erb
@@ -1,2 +1,5 @@
-<b>Job:</b>
-<p>client: <%= @jobs.client%> address: <%= @jobs.address%></p>
+<h1>JOB</h1>
+<p>client: <%= @job.client%> address: <%= @job.address%><br> material: <%= @job.stock_req%> meters of <%= @job.show_stock %>
+</p>
+<a href="/jobs/<%= @job.id%>/edit">Edit Job</a>
+
