--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,16 +3,18 @@
   <head>
     <title>Pricing App</title>
   </head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Maven+Pro:400,500' rel='stylesheet' type='text/css'>
     <body>
       <nav>
-        <a href="/home">Home</a>
-        <a href="/jobs">all jobs</a>
-        <a href="/jobs/new">price a job</a>
-        <a href="/stocks">stock</a>
-       <!--  <a href="/stocks/edit">add stock</a> -->
+        <ul>
+          <li><a href="/home">Home</a></li>
+          <li><a href="/jobs">all jobs</a></li>
+          <li><a href="/jobs/new">price a job</a></li>
+          <li><a href="/stocks">stock</a></li>
+        </ul>
      </nav>
+
     <%= yield%>
   </body>
 </html>
