--- a/views/jobs/show.erb
+++ b/views/jobs/show.erb
@@ -1,5 +1,14 @@
 <h1>JOB</h1>
 <p>client: <%= @job.client%> address: <%= @job.address%><br> material: <%= @job.stock_req%> meters of <%= @job.show_stock %>
 </p>
-<a href="/jobs/<%= @job.id%>/edit">Edit Job</a>
+<p>
+  if this job went into productions stock would be reduced to
+  <%= stock_left = (@stock.stock_level - @job.stock_req)%>
+
+  <% if stock_left <= 0 %>
+     WARNING YOU WILL BE OUT OF STOCK
+   <%end %>
+
+</p>
+<a href="/jobs/<%= @job.id%>/edit">Delete Job?</a>
 
