--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,8 @@
-<h1>Welcome to the Homepage of the pricing app</h1>
+<div class="company_details">
+  <h1>iFab</h1>
+  <p>1  Any Street </p>
+  <p>SomeCity</p>
+  <p>SomeCountry</p>
+  <p>tel: 0111 222 3333</p>
+
+</div>
