--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,12 +9,15 @@
       <nav>
         <ul>
           <li><a href="/home">Home</a></li>
-          <li><a href="/jobs">all jobs</a></li>
-          <li><a href="/jobs/new">price a job</a></li>
-          <li><a href="/stocks">stock</a></li>
+          <li><a href="/jobs">All Jobs</a></li>
+          <li><a href="/jobs/new">Price a Job</a></li>
+          <li><a href="/stocks">Stock</a></li>
         </ul>
      </nav>
-
+   
     <%= yield%>
+    <div id="footer">
+    &copy aidanpinkman2016
+    </div>
   </body>
 </html>
