--- a/views/stocks/index.erb
+++ b/views/stocks/index.erb
@@ -2,9 +2,19 @@
 
 
 <% @stock.each do |stock|%>
-<b>Stock type</b><br>
-<p><a href="/stocks/<%= stock.id%>">    <%= stock.stock_type.upcase %><br>
-  <%= stock.stock_level%> meters in stock</p><br>
-<hr>
+<h2>Stock type</h2>
+
+<table>
+<tr>
+  <td>Stock Type</td>
+  <td>In Stock</td>
+</tr>
+<tr>
+  <td><a href="/stocks/<%= stock.id%>"><%= stock.stock_type.upcase %></td>
+  <td><%= stock.stock_level%> meters in stock</td>
+</tr>
+
+
+</table>
 
 <%end%>
