--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ p {
   text-align: center;
   color:#677077;
   font-weight: 500;
- /* background-color: rgba(242,182,50,0.8);*/
+  background-color: rgba(242,182,50,0.8);
   display: block;
   border-radius: 3px;
   padding: 10px;
@@ -144,7 +144,7 @@ table a {
 
 #footer {
    position:relative;
-   bottom:0;
+   margin-bottom:0;
    width:100%;
    height:60px;   
    
